# aci-mcp

./: .env.example  .gitignore  .gitlab-ci.yml  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  LICENSE-COMMERCIAL.md  Makefile  README.md  SECURITY.md
.github/workflows/: ci.yml
.opencode/: opencode.json
.opencode/skills/aci-mcp/: SKILL.md
docs/: README.md
docs/architecture/: data-flow.md  exceptions.md  overview.md
docs/concepts/: aci-object-model.md
docs/configuration/: settings.md
docs/deployment/: docker.md  https.md  quickstart.md
docs/getting-started/: docker.md  https.md  quickstart.md
docs/internals/: apic-client.md  auth.md  exceptions.md  middleware.md  registry.md  search-algorithm.md
docs/scripts/: lab.md
docs/tools/: get_schema.md  query.md  search_classes.md
mcp/: .env.example  exceptions.py  main.py  pyproject.toml
mcp/apic/: __init__.py  client.py
mcp/client/: SKILL.md  aci-mcp.json
mcp/data/: class-descriptions.json
mcp/deploy/: Caddyfile  Dockerfile  docker-compose.yml
mcp/middleware/: auth.py  health.py  oauth.py
mcp/registry/: __init__.py  descriptions.py  filter.py  schema.py
mcp/tests/: conftest.py  eval_search.py
mcp/tests/fixtures/: search_golden.json
mcp/tests/integration/: __init__.py  test_tools.py
mcp/tests/perf/: conftest.py  test_apic_parse_perf.py  test_filter_perf.py  test_schema_perf.py  test_search_perf.py
mcp/tests/unit/: __init__.py  test_client.py  test_exceptions.py  test_filter.py  test_main_startup.py  test_middleware_auth.py  test_middleware_health.py  test_middleware_oauth.py  test_schema.py  test_search.py  test_tool_coercion.py
scripts/: __init__.py  download-schemas.sh  lab.py  list-configurable-classes.sh  mcp-client.py  publish-github.sh  setup-env.py
scripts/tui/: app.py  log_parser.py  theme.tcss
