[project]
name = "aci-mcp"
version = "0.3.0"
description = "Schema-driven FastMCP server for Cisco ACI APIC"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.1.1,<4.0",
    "httpx>=0.27,<1.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
