[project]
name = "aci-mcp"
version = "1.0.0"
description = "Schema-driven FastMCP server for Cisco ACI APIC"
readme = "README.md"
license = {text = "PolyForm-Noncommercial-1.0.0"}
requires-python = ">=3.12"
authors = [
    {name = "Khalid El-Ouiali", email = "monark.aiops@pm.me"},
]
maintainers = [
    {name = "Khalid El-Ouiali", email = "monark.aiops@pm.me"},
]
keywords = ["mcp", "cisco", "aci", "apic", "network-automation", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastmcp>=3.1.1,<4.0",
    "httpx>=0.27,<1.0",
    "python-dotenv>=1.0,<2.0",
]

[project.urls]
Homepage = "https://github.com/k3l0-dev/aci-mcp"
Repository = "https://github.com/k3l0-dev/aci-mcp"
Documentation = "https://github.com/k3l0-dev/aci-mcp/tree/main/docs"
Changelog = "https://github.com/k3l0-dev/aci-mcp/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/k3l0-dev/aci-mcp/issues"
"Commercial License" = "mailto:monark.aiops@pm.me"

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
    "ruff>=0.9,<1.0",
]
